Chapter-3/Part-1/e-2.01/infra/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-pp-dep
  labels:
    app: log-output-pp
    version: "2.01"
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
      version: "2.01"
      component: backend
  template:
    metadata:
      labels:
        app: log-output
        version: "2.01"
        component: backend
    spec:
      containers:
        - name: log-output-pp-ctr
          image: michaelangelovalente/log_output-img:ex2.01
          ports:
            - name: http-logoutput
              containerPort: 8095
              protocol: TCP
        - name: pingpong-ctr
          image: michaelangelovalente/ping_pong_img:ex2.01
          ports:
            - name: http-pingpong
              containerPort: 8096
              protocol: TCP
