Chapter-3/Part-1/e-2.01/infra/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-pp-ingress
spec:
  rules:
    - http:
        paths:
          - path: / # matches app base path for endpoint
            pathType: Prefix
            backend:
              service:
                name: log-output-pp-svc # ingress looks for this service and routes to log-reader-svc Service
                port:
                  number: 2355
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 2366
